feat: Quest module (#97)
* feat: QuestModule
* QuestModule: Added the configuration
* Quest Module: Added the task option for additional tasks
* Updated some translations
* Added additional logic for when there are no more quests
* Added an option to use the module as a behavior
* Implemented more quests settings
* Added quest types
* Updated how the module set the config
* Added sign task
* fix: Removed some incompatibilities with new releases
* fix: Fixed a possible case of null pointer error
* Added more information to the module
* feat: Added an option to activate the pet locator for NPCs
* feat: Added the option to configure the pet depending on the quest
* fix: Fixed pet
* updated some requests
* Fixed an icompatibility with pika plugin
* Added more information on current status
* fix auto cloak name
* fix: Discordtag info
* AutoChangeMap: Change ingoreTarget to true by default
* feat: GG quests
* Added an option in the menu to clear the NPC list
* Updated AutoBestAmmo
* refactor: Replaced some protected methods/variables by private
* Added new translations
* fix: StopButton no longer checks if it has not been activated
* Fix astral ammo supplier
* refactor: QuestModule: No longer required Main
* refactor: ProfileChanger: No longer required Main
* Refactor: Removed use of main to switch profiles
* refactor: Cleaned up a bit more use of main
* Fixed auto best ammo for mimesis npcs
* Updated the private part so that the build can be made
* Removed maven config
* Auto Best Formation: Now it should not change formation continuously by speed.
* Astral: Small fix so that the ship does not enter radiation
* Auto Best Ability: Supported more abilities
* Fixed null pointer in Auto Best Ability